# Zzz

./: .editorconfig  .env.authentik  .env.example  .env.preprod  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  docker-compose.authentik.yml  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.pipeline.yml  docker-compose.platform.yml  docker-compose.proxy.yml  docker-compose.yml
.github/: pull_request_template.md
TODO/: history.md
services/pipeline/: .dockerignore  pyproject.toml
services/pipeline/ai_engine/: Dockerfile  README.md  main.py  message_utils.py  model_registry.py
services/pipeline/ai_engine/calibration/: __init__.py  generate_calibration.py
services/pipeline/ai_engine/model_vehicle/: DTAN.py  __init__.py  calibration.py  constants.py  dtan_inference.py  export_model.py  glrt_detector.py  model_T.py  simple_interval_counter.py  speed_filter.py  utils.py  vehicle_count.py  vehicle_speed.py  visualization.py
services/pipeline/ai_engine/model_vehicle/libcpab/: .gitignore  LICENSE  README.md  __init__.py  main.py  setup.py
services/pipeline/ai_engine/model_vehicle/libcpab/examples/: alignment_demo.py  learning_data_augmentation_demo.ipynb  sequential_demo.py  simple_demo.py
services/pipeline/ai_engine/model_vehicle/libcpab/libcpab/: __init__.py  alignment.py  cpab.py  sequential.py
services/pipeline/ai_engine/model_vehicle/models_parameters/: allignment_parameters_16_02_2026_fullSet_28s_parameters_best.pth  allignment_parameters_3_03_2026_30s_windows_parameters_best.pth  detection_thresholds.csv  detection_thresholds_adapted_sectionwise.csv  dtan_carros_48h_full_parameters_best.pth  dtan_carros_default_parameters_best.pth  dtan_mathis_section1_parameters_best.pth  dtan_mathis_section2_parameters_best.pth  dtan_promenade_default_parameters_best.pth  mean_std_features.csv  mean_std_features_adapted_sectionwise.csv  model_vehicles_speed_parameters.pth  vehicle_counting_model.pt
services/pipeline/ai_engine/schema/: das_detection.avsc  das_speed_analysis.avsc  das_vehicle_count.avsc
services/pipeline/ai_engine/training/: __init__.py  loss.py  requirements.txt  train_dtan.py
services/pipeline/benchmarks/ai_engine/: bench.py
services/pipeline/benchmarks/ai_engine/baselines/: baseline.json
services/pipeline/config/: __init__.py  fiber_config.py  fibers.yaml  service_loader.py
services/pipeline/experiments/vehicle_detection_tuning/12_clean_inference/: inference.ipynb
services/pipeline/processor/: Dockerfile  README.md  main.py
services/pipeline/processor/processing_tools/: __init__.py  processing_chain.py  step_registry.py
services/pipeline/processor/processing_tools/math/: __init__.py  bandpass.py
services/pipeline/processor/processing_tools/processing_steps/: bandpass_filter.py  base_step.py  common_mode_removal.py  scale.py  spatial_decimation.py  temporal_decimation.py
services/pipeline/processor/schema/: das_processed_measurement.avsc
services/pipeline/shared/: __init__.py  ai_metrics.py  circuit_breaker.py  consumer.py  gpu_lock.py  health.py  kafka_setup.py  message.py  message_metrics.py  message_ops.py  otel_setup.py  persistent_dlq.py  processor_metrics.py  producer.py  retry_handler.py  service_base.py  service_config.py  time_utils.py  transformer.py
services/pipeline/shared/schema/: das_dlq_message.avsc
services/pipeline/tests/: conftest.py  test_ai_engine_orchestration.py  test_ai_engine_real.py  test_bandpass_filter.py  test_bidirectional.py  test_buffered_transformer.py  test_calibration.py  test_circuit_breaker.py  test_common_mode_removal.py  test_continuous_timestamps.py  test_counting_dedup.py  test_das_processor.py  test_energy_normalization.py  test_fiber_config.py  test_fiber_config_manager.py  test_glrt_per_pair.py  test_integration.py  test_message.py  test_message_ops.py  test_notebook_vs_production.py  test_peak_counting.py  test_processing_chain.py  test_retry_handler.py  test_rolling_buffered_transformer.py  test_service_base_lifecycle.py  test_service_loader.py  test_spatial_decimation.py  test_spatial_stepping.py  test_speed_from_pairs.py  test_temporal_decimation.py  test_time_utils.py  test_transformer_patterns.py
services/pipeline/tests/ai_engine/: conftest.py  test_ai_engine_service.py  test_align_window.py  test_avro_conformance.py  test_calibration.py  test_counter_aggregation.py  test_failure_modes.py  test_glrt_detector.py  test_golden_snapshot.py  test_message_roundtrip.py  test_message_utils.py  test_model_integrity.py  test_model_registry.py  test_normalize_channel_energy.py  test_predict_theta.py  test_production_params.py  test_speed_filter.py  test_speed_formula.py  test_split_channel_overlap.py  test_synthetic_detection.py  test_utils_extended.py  test_vehicle_counter.py  test_vehicle_speed.py
services/pipeline/tests/ai_engine/fixtures/: generate_golden_fixture.py  golden_input.npz  golden_normalization.npz  golden_reference_arm64.npz  golden_reference_x86_64.npz  regenerate_reference.py
services/pipeline/tests/integration/: __init__.py  conftest.py  test_dlq_flow.py  test_kafka_connectivity.py  test_processor_flow.py
services/pipeline/tests/processor/: conftest.py  test_bandpass_filter.py  test_common_mode_removal.py  test_contract.py  test_determinism_multibatch.py  test_edge_cases.py  test_golden_processor.py  test_processing_chain.py  test_scale.py  test_spatial_decimation.py  test_step_reorder.py  test_temporal_decimation.py
services/pipeline/tests/processor/fixtures/: generate_golden_processor.py  golden_processor_arm64.npz
(+754 files in other folders)
