[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "das-pipeline"
version = "1.0.0"
description = "DAS Pipeline for vehicle detection and speed estimation"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka[avro]",
    "aiohttp>=3.9.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-logging>=0.45b0",
    "opentelemetry-propagator-b3>=1.24.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
    "pandas",
    "tqdm",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff",
    "mypy",
    "types-PyYAML",
    "tqdm",
    "pip-audit",
    "bandit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "config*", "processor*", "ai_engine*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.avsc", "*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["ai_engine/model_vehicle", "experiments", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "C4"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["ai_engine/model_vehicle", "experiments", ".venv", "tests"]

# model_vehicle is excluded above, but mypy still follows imports into it.
# Per-module override silences those errors properly.
[[tool.mypy.overrides]]
module = "ai_engine.model_vehicle.*"
ignore_errors = true

# Mixin classes use `self: ServiceBase` for type checking, which mypy
# flags as [misc] because the mixin isn't a subclass of ServiceBase.
# This is a known mypy limitation with the mixin pattern.
[[tool.mypy.overrides]]
module = [
    "shared.health",
    "shared.message_ops",
    "shared.kafka_setup",
]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
